--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 .pnp.js
 .yarn/install-state.gz
 
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # testing
 /coverage
 
