--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.14",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "sass": "^1.79.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/next-pwa": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
-  }
+    "eslint-config-next": "14.2.14",
+    "typescript": "^5"
+  },
+  "packageManager": "yarn@4.5.0"
 }
