--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sass": "^1.80.4"
   },
   "devDependencies": {
