--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/next-pwa": "^5",
