--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "sass": "^1.80.4",
     "zustand": "^5.0.0"
   },
