--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.14",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
@@ -23,6 +24,7 @@
     "@types/next-pwa": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
